gcc/testsuite/gfortran.dg/logical_comp.f90
@@ -1,9 +1,9 @@
 ! { dg-do compile }
-! PR fortran/22503
+! PR fortran/22503, PR fortran/32899
 ! Suggest use of appropriate comparison operator
 
 program foo
   logical :: b
-  b = b .eq. b  ! { dg-error ".eqv. instead of .eq." }
-  b = b .ne. b  ! { dg-error ".neqv. instead of .ne." }
+  b = b .eq. b  ! { dg-error "must be compared with" }
+  b = b .ne. b  ! { dg-error "must be compared with" }
 end program
